# test000

./: CMakeLists.txt  README.md  handle_file.cc  handle_file.h  ksw2_align.cc  ksw2_align.h  main.cc  sam.h  sequence_handler.cc  sequence_handler.h  sequence_handler2.cc  utils.cc  utils.h
data/: rs447.fa  test2.fa  test4.fa
src/: Makefile  edlib_align.cc  edlib_align.h  fenwick_tree.h  handle_file.cc  handle_file.h  hash.h  logger.h  main.cc  radix_sort.h  sam.cc  sequence_handler.cc  sequence_handler.h  suffix_array.h  thread_pool.h  transform.h  utils.cc  utils.h
src/edlib/src/: edlib.cpp
src/ksw2/: ksw2_extz2_sse.c
